# flask-sandal

./: README.md  pyproject.toml  requirements.txt
flask_sandal/: __init__.py  api.py  mapping.py
tests/: test_api.py
