[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-sandal"
description = "Strapping Flask to AWS Lambda"
version = "0.0.1"
license = { file = "LICENSE" }
keywords = ["flask", "aws", "lambda", "flask-lambda", "flask-lambda-support", "flask-aws-lambda", "WSGI", "werkzeug"]
authors = [
    { name = "Peter Busch", email = "pbuschmail-poodle@yahoo.com" },
]
maintainers = [
    { name = "Peter Busch", email = "pbuschmail-poodle@yahoo.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = [
    "flask>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/WiredNerd/flask-sandal"
"Bug Tracker" = "https://github.com/WiredNerd/flask-sandal/issues"
